--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <!-- META DO PINTEREST -->
   <meta name="p:domain_verify" content="d6df7e61ccd136f806da616775c75660" />
+
+  <!-- OPEN GRAPH TAGS (necessário para Rich Pins) -->
+  <meta property="og:title" content="MacflyToTheWorld" />
+  <meta property="og:description" content="Conteúdos inspiradores, lifestyle, viagens e recomendações selecionadas." />
+  <meta property="og:type" content="article" />
+  <meta property="og:image" content="https://macflytotheworld.github.io/macflyworld/img/main.jpg" />
+
   <meta charset="utf-8" />
   <title>MacflyToTheWorld</title>
 </head>
