Fix CSV_URL string formatting in link.html

--- a/link.html
+++ b/link.html
@@ -134,7 +134,7 @@
 
   <script>
     // 🔗 SUBSTITUI AQUI PELO TEU LINK CSV DO GOOGLE SHEETS
-    const CSV_URL = https://docs.google.com/spreadsheets/d/1PExR6H0gmgnHi0OO41sKb6YaY6T1An6vKQpnPzKZJBY/edit?usp=sharing;
+    const CSV_URL = "https://docs.google.com/spreadsheets/d/1PExR6H0gmgnHi0OO41sKb6YaY6T1An6vKQpnPzKZJBY/edit?usp=sharing";
 
     async function fetchLinks() {
       try {
