--- a/link.html
+++ b/link.html
@@ -134,7 +134,7 @@
 
   <script>
     // 🔗 SUBSTITUI AQUI PELO TEU LINK CSV DO GOOGLE SHEETS
-    const CSV_URL = "https://docs.google.com/spreadsheets/d/1PExR6H0gmgnHi0OO41sKb6YaY6T1An6vKQpnPzKZJBY/edit?usp=sharing";
+    const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTaP8Ts1d3hiug4Xk-Dgi0OiQiSGKfaQo3pbGrk-J0QyBXChHldTNRXG_F4JPzbz58irxEO_USlIngn/pub?gid=0&single=true&output=csv";
 
     async function fetchLinks() {
       try {
