--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 <head>
-  <!-- META DO PINTEREST -->
-  <meta name="p:domain_verify" content="d6df7e61ccd136f806da616775c75660" />
-
-  <!-- OPEN GRAPH TAGS (necessário para Rich Pins) -->
-  <meta property="og:title" content="MacflyToTheWorld" />
-  <meta property="og:description" content="Conteúdos inspiradores, lifestyle, viagens e recomendações selecionadas." />
-  <meta property="og:type" content="article" />
-  <meta property="og:image" content="https://macflytotheworld.github.io/macflyworld/img/main.jpg" />
-
   <meta charset="utf-8" />
   <title>MacflyToTheWorld</title>
+
+  <!-- META DO PINTEREST (manténs aqui para a verificação continuar a funcionar) -->
+  <meta name="p:domain_verify" content="d6df7e61ccd136f806da616775c75660" />
+
+  <!-- Redirect imediato para a página Link in Bio -->
+  <meta http-equiv="refresh" content="0; url=/link.html" />
 </head>
 <body>
-  <h1>MacflyToTheWorld</h1>
-  <p>Domínio principal para verificação no Pinterest.</p>
 </body>
 </html>
