Update comments and add fallback script in index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
   <meta charset="utf-8" />
   <title>MacflyToTheWorld</title>
 
-  <!-- META DO PINTEREST (manténs aqui para a verificação continuar a funcionar) -->
+  <!-- Meta do Pinterest - mantém para verificação -->
   <meta name="p:domain_verify" content="d6df7e61ccd136f806da616775c75660" />
 
-  <!-- Redirect imediato para a página Link in Bio -->
+  <!-- Redirecionamento imediato para o link.html -->
   <meta http-equiv="refresh" content="0; url=/link.html" />
+
+  <!-- Fallback para navegadores antigos -->
+  <script>
+    window.location.href = "/link.html";
+  </script>
 </head>
 <body>
 </body>
