--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>MacflyToTheWorld</title>
 
-  <!-- Meta do Pinterest - mantém para verificação -->
+  <!-- Pinterest domain verification -->
   <meta name="p:domain_verify" content="d6df7e61ccd136f806da616775c75660" />
 
-  <!-- Redirecionamento imediato para o link.html -->
+  <!-- Automatic redirect to the real public page -->
   <meta http-equiv="refresh" content="0; url=/link.html" />
 
-  <!-- Fallback para navegadores antigos -->
+  <!-- Fallback redirect for older browsers -->
   <script>
     window.location.href = "/link.html";
   </script>
